--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,7 +415,11 @@ nav button.active {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 30px;
+    gap: 25px;
+}
+
+.social-icons a {
+    font-size: 21px;
 }
 
 .contact-heading {
@@ -934,6 +938,123 @@ div.rbc-event.rbc-event-selected,
         margin: 0;
     }
 
+    /* Contact */
+    .contact-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 90%;
+    }
+
+    .contact-container {
+        width: 100%;
+        height: 70%;
+        border-radius: 15px;
+        background: linear-gradient(to bottom, #015e41, #000000);
+        color: #fff;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        font-weight: bold;
+        font-size: 17px;
+        font-family: Times, serif;
+    }
+
+    .contact-container p {
+        font-size: 16px;
+    }
+
+    .contact-container h1 {
+        text-align: center;
+    }
+
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        margin-right: 0;
+    }
+
+    .form-group label {
+        margin-bottom: 5px;
+    }
+
+    .required {
+        vertical-align: super;
+        font-size: smaller;
+    }
+
+    #message {
+        height: 60px;
+    }
+
+    .contact-input {
+        width: 25em;
+        height: 3em;
+        font-size: 18px;
+    }
+
+    .contact-textarea {
+        width: 50%;
+        height: 15em;
+    }
+
+    .form-row {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0;
+        align-items: center;
+    }
+
+    .contact-phone-email-social {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        align-items: center;
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+
+    .contact-lets-chat {
+        font-weight: normal;
+        font-size: 40px;
+        margin-left: 10px;
+    }
+
+    .social-icons {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 16px;
+    }
+
+    .social-icons a {
+        font-size: 24px;
+    }
+
+    .contact-heading, .contact-container label {
+        font-weight: bold;
+        font-size: 17px;
+        font-family: Times, serif;
+    }
+
+    .contact-heading p {
+        font-weight: normal;
+        font-size: 17px;
+        font-family: Times, serif;
+    }
+
+
+    #contact-submit-button {
+        margin-top: 10px;
+        margin-left: 55%;
+    }
+
+    .contact-submit-response {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
 
     /* Footer */
     .footer-columns {
@@ -1149,5 +1270,10 @@ div.rbc-event.rbc-event-selected,
 
     .footer-columns {
         padding-top: 30px;
+    }
+
+    #contact-submit-button {
+        margin-top: 10px;
+        margin-left: 85%;
     }
 }
