--- a/styles/styles.css
+++ b/styles/styles.css
@@ -322,7 +322,7 @@ nav button.active {
   flex-direction: column;
   height: 70%;
   padding: 10px;
-  width: 75%;
+  width: 100%;
 }
 .contact-container h1 {
   text-align: center;
@@ -394,7 +394,9 @@ nav button.active {
 }
 
 #contact-submit-button {
-  margin-left: 83%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 10px;
 }
 
@@ -437,15 +439,10 @@ nav button.active {
   white-space: normal;
 }
 
-.rbc-event {
-  background-color: #015e41 !important;
-}
-.rbc-event.rbc-event-selected {
-  background-color: #015e41 !important;
-}
-
-.rbc-selected .rbc-day-slot.rbc-background-event {
-  background-color: #015e41 !important;
+.rbc-calendar .rbc-month-view .rbc-day-bg.rbc-today {
+  background-color: #baceba;
+  border-color: #015e41;
+  border-width: 4px;
 }
 
 .rbc-event-content {
@@ -954,7 +951,9 @@ nav button.active {
     font-weight: normal;
   }
   #contact-submit-button {
-    margin-left: 55%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
   }
   .contact-submit-response {
@@ -992,7 +991,7 @@ nav button.active {
   }
   .content {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-    margin: auto;
+    margin: 0;
   }
   .logo-bar {
     padding-left: 10px;
@@ -1058,7 +1057,7 @@ nav button.active {
   .contact-container {
     height: 100%;
     padding: 10px;
-    width: 80%;
+    width: 100%;
   }
   .contact-container h1 {
     font-size: 24px;
@@ -1130,7 +1129,9 @@ nav button.active {
     padding-top: 30px;
   }
   #contact-submit-button {
-    margin-left: 85%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
   }
 }
