--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -356,7 +356,6 @@ nav {
 
 }
 
-// Contact
 .contact-wrapper {
   align-items: center;
   display: flex;
@@ -372,7 +371,7 @@ nav {
   flex-direction: column;
   height: 70%;
   padding: 10px;
-  width: 75%;
+  width: 100%;
 
   h1 {
     text-align: center;
@@ -447,7 +446,9 @@ nav {
 }
 
 #contact-submit-button {
-  margin-left: 83%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 10px;
 }
 
@@ -493,19 +494,10 @@ nav {
   white-space: normal;
 }
 
-
-.rbc-event {
-  background-color: $litterpic-green !important; // sass-lint:disable-line no-important
-
-  &.rbc-event-selected {
-    background-color: $litterpic-green !important; // sass-lint:disable-line no-important
-  }
-}
-
-.rbc-day-slot {
-  .rbc-selected &.rbc-background-event {
-    background-color: $litterpic-green !important; // sass-lint:disable-line no-important
-  }
+.rbc-calendar .rbc-month-view .rbc-day-bg.rbc-today {
+  background-color: #baceba;
+  border-color: $litterpic-green;
+  border-width: 4px;
 }
 
 .rbc-event-content {
@@ -534,6 +526,7 @@ nav {
   color: $black;
   font-size: 20px;
 }
+
 
 // Volunteer Events Table
 .table {
@@ -1111,7 +1104,9 @@ nav {
   }
 
   #contact-submit-button {
-    margin-left: 55%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
   }
 
@@ -1160,9 +1155,10 @@ nav {
     font-size: 14px;
   }
 
+
   .content {
     box-shadow: 0 4px 8px $translucent-black;
-    margin: auto;
+    margin: 0;
   }
 
 
@@ -1247,7 +1243,7 @@ nav {
   .contact-container {
     height: 100%;
     padding: 10px;
-    width: 80%;
+    width: 100%;
 
     h1 {
       font-size: 24px;
@@ -1341,7 +1337,9 @@ nav {
   }
 
   #contact-submit-button {
-    margin-left: 85%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
   }
 }
