--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,7 @@
 @import 'colors';
 @import 'contact';
 @import 'dontate';
+@import 'fonts';
 @import 'footer';
 @import 'home';
 @import 'homeimagerow';
@@ -15,6 +16,10 @@
 
 //Font Awesome
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
+//Rubik Medium
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+//Ropa Sans (replaces DIN)
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 
 
 // styles.css
@@ -25,14 +30,18 @@
 
 body {
   background-color: $white;
+  font-family: RopaSans, sans-serif;
 }
 
 main {
+  font-family: RopaSans, sans-serif;
   min-height: 100%;
 }
 
 
 h1 {
+  font-family: Rubik, Times, sans-serif;
+
   &.heading-text {
     color: $litterpic-green;
     font-size: 3rem;
@@ -42,6 +51,8 @@ h1 {
 }
 
 h2 {
+  font-family: Rubik, Times, sans-serif;
+
   &.heading-text {
     color: $litterpic-green;
     margin-bottom: .3rem;
@@ -51,15 +62,18 @@ h2 {
 }
 
 p {
+  font-family: RopaSans, sans-serif;
   font-size: 1.2rem;
   line-height: 1.75;
 }
 
 li {
+  font-family: RopaSans, sans-serif;
   margin-bottom: 1rem;
 }
 
 ol {
+  font-family: RopaSans, sans-serif;
   margin-left: 2.5rem;
 }
 
@@ -78,12 +92,14 @@ label {
 }
 
 form {
+  font-family: RopaSans, sans-serif;
   padding: .7rem;
 }
 
 input,
 select,
 textarea {
+  font-family: RopaSans, sans-serif;
   margin-bottom: 1rem;
 }
 
@@ -91,6 +107,7 @@ textarea {
   align-items: center;
   background-color: $gray;
   display: flex;
+  font-family: RopaSans, sans-serif;
   justify-content: center;
   padding: 1.5rem;
 }
@@ -98,6 +115,7 @@ textarea {
 .content {
   background-color: $white;
   box-shadow: 0 .125rem .25rem $translucent-black;
+  font-family: RopaSans, sans-serif;
   margin-left: auto;
   margin-right: auto;
   padding: 1.5rem;
