Standardize fonts to Rubik for headers and RopaSans for text

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -34,6 +34,7 @@
 p {
   &.litter-weight {
     color: $litterpic-green;
+    font-family: RopaSans, sans-serif;
     font-size: 2rem;
     padding: 1rem;
   }
