--- a/styles/about.scss
+++ b/styles/about.scss
@@ -7,6 +7,7 @@
 }
 
 .directors-text {
+  font-family: Rubik, Times, sans-serif;
   font-size: 1.75rem;
   font-weight: bold;
   margin-bottom: 1.25rem;
