Home Page - bold and italicize inspire change text.

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -38,6 +38,12 @@ p {
     font-size: 2rem;
     padding: 1rem;
   }
+
+  .index-inspire-change-text {
+    color: $litterpic-green;
+    font-style: italic;
+    font-weight: bold;
+  }
 }
 
 .index-wrapper {
