--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -3,6 +3,7 @@
 
 // Logo Bar
 .logo-bar {
+  align-items: center;
   background-color: $white;
   display: flex;
   justify-content: space-between;
@@ -11,8 +12,7 @@
   padding-top: 1rem;
 
   img {
-    height: 4rem;
-    padding-top: .3rem;
+    height: 3.5rem;
     width: auto;
 
     &:hover {
@@ -31,11 +31,39 @@
     flex-direction: column;
     font-family: RopaSans, sans-serif;
     font-size: 1rem;
+    height: 4rem;
+    justify-content: center;
     line-height: 1.25;
-    margin: .4rem;
-    padding: .5rem;
+    margin: 0;
+    padding: 0 1rem;
     width: auto;
   }
+
+  .donate-button {
+    align-items: center;
+    background-color: $linkedin-blue;
+    border: 0;
+    border-radius: .5rem;
+    color: $white;
+    cursor: pointer;
+    display: flex;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 4rem;
+    justify-content: center;
+    margin-bottom: auto;
+    padding: 0 1rem;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color .5s ease;
+    width: auto;
+
+    &:hover {
+      background-color: $nav-green;
+      color: $litterpic-green;
+    }
+  }
+
 
   .tagline {
     color: $litterpic-green;
@@ -47,15 +75,16 @@
 .logo-bar-right-content {
   border-color: $black;
   border-width: .06rem;
-  display: flex;
-  flex-direction: column;
+  column-gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   width: auto;
 }
 
 .logo-content {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  margin-right: .6rem;
 }
 
 .logo {
@@ -70,25 +99,6 @@
   margin-left: .5rem;
 }
 
-.donate-button {
-  background-color: $linkedin-blue;
-  border: 0;
-  border-radius: .5rem;
-  color: $white;
-  cursor: pointer;
-  font-size: 2.5rem;
-  font-weight: bold;
-  margin-bottom: auto;
-  padding: .3rem;
-  text-align: center;
-  text-decoration: none;
-  transition: background-color .5s ease;
-
-  &:hover {
-    background-color: $nav-green;
-    color: $litterpic-green;
-  }
-}
 
 @media (max-width: 76.5rem) {
   .logo-bar {
