Updated user stories to masonry layout, added user profile picture to posts.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,7 @@
 @import 'login';
 @import 'logobar';
 @import 'navbar';
-@import 'userpost';
+@import 'stories';
 @import 'volunteer';
 
 //Font Awesome
