--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -5,6 +5,7 @@
 .community-service-button {
   border-radius: .5em;
   display: block;
+  font-family: RopaSans, sans-serif;
   margin: 1.875rem auto 2.5rem;
   padding: .6rem;
 }
