--- a/styles/styles.css
+++ b/styles/styles.css
@@ -630,6 +630,7 @@ p .index-inspire-change-text {
   padding-top: 1rem;
 }
 .logo-bar img {
+  border-radius: 0.5rem;
   height: 3.5rem;
   width: auto;
 }
@@ -846,53 +847,51 @@ nav button.active {
   justify-content: space-between;
 }
 
+.create-post-button {
+  border-radius: 0.5rem;
+}
 .create-post-button button {
   align-self: flex-end;
-  border-radius: 0.5em;
   margin-bottom: 2.5rem;
 }
 
-.story-posts {
-  display: flex;
-  justify-content: space-around;
+.stories-about-us {
+  font-size: 1.25rem;
+  margin-bottom: 3rem;
 }
 
 .post-grid {
-  display: grid;
-  gap: 0.5rem;
-  grid-auto-flow: row;
-  grid-template-columns: repeat(2, 34rem);
+  display: flex;
+  gap: 2rem;
 }
 
 .post {
-  border: solid #015e41;
+  border: 0.01rem solid #015e41;
   border-radius: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  padding-top: 0.6rem;
+  margin-bottom: 2rem;
 }
-.post p {
-  text-align: center;
+.post:not(:last-child) {
+  border-bottom: 0;
 }
 
 .post-carousel {
+  border: 1px #015e41;
   display: flex;
   justify-content: center;
   position: relative;
 }
 
 .carousel-image {
-  height: 33.125rem;
+  height: 350px;
   object-fit: cover;
   overflow: hidden;
-  width: 33.125rem;
+  width: 500px;
 }
 
 .carousel-chevron {
   background-color: #fff;
   color: #015e41;
-  height: 33.125rem;
+  height: auto;
   position: relative;
   z-index: 1;
 }
@@ -908,21 +907,39 @@ nav button.active {
   padding-left: 0.3rem;
 }
 
+.post-username-location {
+  display: grid;
+  grid-template-columns: 10% 40% 50%;
+  justify-content: space-between;
+  padding-left: 2rem;
+  padding-top: 1rem;
+}
+
+.profile-image img {
+  border-radius: 50%;
+  height: 40px;
+  object-fit: fill;
+  width: 40px;
+}
+
 .post-user-name {
+  align-items: center;
+  display: flex;
   font-weight: normal;
-  margin-left: 4.3rem;
+}
+
+.post-location {
+  align-items: center;
+  color: #00f;
+  display: flex;
+  font-size: 1rem;
+  justify-self: end;
+  padding-right: 1rem;
 }
 
 .post-title {
   font-size: 1.5em;
   font-weight: bolder;
-  margin-left: 1rem;
-  margin-top: 1.25rem;
-}
-
-.post-location {
-  color: #00f;
-  font-size: 1rem;
   margin-left: 1rem;
   margin-top: 1.25rem;
 }
@@ -936,9 +953,9 @@ nav button.active {
 
 .post-description {
   font-family: inherit;
-  font-size: 2.125rem;
-  margin: 0.3rem auto 1rem;
-  width: 25rem;
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  width: auto;
 }
 
 .create-post-content {
@@ -949,102 +966,10 @@ nav button.active {
   border-radius: 0.5em;
 }
 
-@media (max-width: 76.5rem) {
-  .story-posts {
-    width: 100%;
-  }
-  .post-grid {
-    display: inline-flex;
-    flex-direction: column;
-    height: 80%;
-    padding: 0;
-    width: 100%;
-  }
-  .post {
-    border: 0.06rem solid #000;
-    min-height: unset;
-    padding: 0.6rem;
-    width: 100%;
-  }
-  .post-carousel {
-    justify-content: center;
-    margin-bottom: 0.6rem;
-    margin-left: auto;
-    margin-right: auto;
-    object-fit: cover;
-    width: auto;
-  }
-  .post-carousel img {
-    height: auto;
-    margin: auto;
-    max-width: 100%;
-    object-fit: cover;
-  }
-  .post-user-name {
-    font-family: Helvetica, serif;
-    font-weight: normal;
-    margin-left: 0.3rem;
-  }
-  .post-title {
-    font-size: 1.5rem;
-    font-weight: bolder;
-    margin-left: 0.3rem;
-    margin-top: 1.25rem;
-  }
-  .post-location {
-    color: #00f;
-    font-family: Helvetica, serif;
-    font-size: 1rem;
-    margin-left: 0.3rem;
-    margin-top: 1.25rem;
-  }
-  .post-litter-weight-collected {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    margin-top: 1.25rem;
-    text-align: center;
-  }
-  .post-description {
-    font-family: inherit;
-    font-size: 1.5rem;
-    margin: 0;
-    width: 18.75rem;
-  }
-}
-@media (max-width: 102.25rem) and (orientation: landscape) {
-  .post-grid {
-    display: inline-flex;
-    flex-direction: column;
-    grid-template-columns: 1fr 1fr;
-    padding: 0.6rem;
-  }
-  .post {
-    border: 0.06rem solid #000;
-    min-height: 6.25rem;
-    padding: 0.6rem;
-    width: 100%;
-  }
-  .post-carousel {
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    object-fit: cover;
-  }
-  .post-carousel img {
-    height: auto;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    object-fit: fill;
-  }
-  .post-description {
-    width: 100%;
-  }
-}
 .community-service-button {
   border-radius: 0.5em;
   display: block;
+  font-family: RopaSans, sans-serif;
   margin: 1.875rem auto 2.5rem;
   padding: 0.6rem;
 }
