--- a/styles/login.scss
+++ b/styles/login.scss
@@ -8,6 +8,16 @@
   justify-content: center;
 }
 
+.sign-in-new-user-heading {
+  display: flex;
+  justify-content: center;
+  margin-bottom: .5rem;
+}
+
+.sign-in-sign-up-link {
+  padding-left: .5rem;
+}
+
 .sign-in-email {
   font-size: 1.1rem;
   margin-left: auto;
