--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -7,6 +7,7 @@ $black: #000;
 $white: #fff;
 $button-hover-yellow: #cf7;
 $gray: #d3d3d3;
+$red: #f00;
 $light-gray: #e5e5e4;
 $table-gray: #ddd;
 $dark-blue: #00f;
@@ -14,3 +15,4 @@ $facebook-blue: #4267b2;
 $instagram-pink: #c13584;
 $linkedin-blue: #0a66c2;
 $translucent-black: rgba(0, 0, 0, .4);
+$input: #e8f0fe;
