--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 .about-us-content {
@@ -451,10 +453,14 @@
   grid-template-columns: repeat(3, 1fr);
   padding-bottom: 0.5rem;
 }
+.footer-column-1 {
+  padding-left: 3rem;
+}
 .footer-column-1, .footer-column-2, .footer-column-3 {
   justify-self: center;
 }
 .footer-column-1 p, .footer-column-2 p, .footer-column-3 p {
+  font-size: 16px;
   text-align: center;
 }
 .footer-column-3 {
@@ -462,8 +468,11 @@
 }
 .footer-column-3 a {
   align-self: start;
+  font-size: 16px;
+  line-height: 1.75;
 }
 .footer-column-3 a:link {
+  font-size: 16px;
   text-decoration: none;
 }
 .footer-links {
@@ -596,6 +605,16 @@ p .index-inspire-change-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.sign-in-new-user-heading {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+}
+
+.sign-in-sign-up-link {
+  padding-left: 0.5rem;
 }
 
 .sign-in-email {
@@ -842,6 +861,70 @@ nav button.active {
     width: auto;
   }
 }
+.signup-form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.signup-email,
+.signup-password,
+.signup-confirm-password {
+  background-color: #e8f0fe;
+  font-size: 1.1rem;
+  margin: 0.5rem auto;
+  position: relative;
+  width: 15.6rem;
+}
+
+.signup-password-container {
+  display: flex;
+  position: relative;
+}
+.signup-password-container .signup-password-toggle-icon {
+  color: #015e41;
+  cursor: pointer;
+  position: absolute;
+  right: 0.5rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.signup-button {
+  border-radius: 0.5rem;
+  font-family: RopaSans, sans-serif;
+  margin: 1.9rem auto 0;
+  width: 6.25rem;
+}
+
+.error-container {
+  align-items: center;
+  display: flex;
+  margin-top: 0.5rem;
+}
+
+.error-message {
+  color: #f00;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  margin-right: 8px;
+}
+
+.error-clear-icon {
+  cursor: pointer;
+}
+
+.signup-legal {
+  font-size: 0.65rem;
+  font-style: italic;
+  padding-top: 0.75rem;
+}
+.signup-legal a {
+  font-size: 0.65rem;
+  font-style: italic;
+}
+
 .stories-top-bar {
   display: flex;
   justify-content: space-between;
