--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -10,6 +10,7 @@ $gray: #d3d3d3;
 $red: #f00;
 $light-gray: #e5e5e4;
 $table-gray: #ddd;
+$profile-text-gray: #aaa;
 $dark-blue: #00f;
 $facebook-blue: #4267b2;
 $instagram-pink: #c13584;
