--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 .about-us-content {
@@ -861,6 +863,62 @@ nav button.active {
     width: auto;
   }
 }
+.profile-content {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.profile-picture {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  grid-column: 2/3;
+  justify-content: start;
+}
+.profile-picture img {
+  border: 2px solid #015e41;
+  border-radius: 50%;
+  height: 10rem;
+  object-fit: cover;
+  width: 10rem;
+}
+
+.edit-profile-button {
+  background-color: #015e41;
+  border: 0;
+  border-radius: 0.5rem;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 0.5rem;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+}
+.edit-profile-button:hover {
+  background-color: #479079;
+  transition: background-color 0.5s ease;
+}
+
+.profile-info {
+  display: flex;
+  flex-direction: column;
+  grid-column: 1/2;
+  padding-left: 4rem;
+}
+
+.profile-item {
+  color: #aaa;
+  font-weight: bold;
+}
+.profile-item:not(:first-child) {
+  padding-top: 1rem;
+}
+
+.profile-value {
+  padding-left: 0.5rem;
+}
+
 .signup-form {
   align-items: center;
   display: flex;
@@ -1243,6 +1301,7 @@ textarea {
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.4);
   margin-left: auto;
   margin-right: auto;
+  min-height: 35vh;
   padding: 1.5rem;
   width: 70%;
 }
