--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,6 +11,7 @@
 @import 'login';
 @import 'logobar';
 @import 'navbar';
+@import 'profile';
 @import 'signup';
 @import 'stories';
 @import 'volunteer';
@@ -111,6 +112,7 @@ textarea {
   box-shadow: 0 .125rem .25rem $translucent-black;
   margin-left: auto;
   margin-right: auto;
+  min-height: 35vh;
   padding: 1.5rem;
   width: 70%;
 
