--- a/styles/about.scss
+++ b/styles/about.scss
@@ -50,18 +50,23 @@
 
 @media (max-width: 76.5rem) {
   .about-us-content {
+    display: grid;
+    gap: 1.25rem;
     margin-bottom: 1.25rem;
   }
 
   .directors-text {
+    font-family: Rubik, Times, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
+    grid-column: 1 / -1;
     margin-bottom: 1.25rem;
     margin-left: .6rem;
     margin-top: 1.875rem;
   }
 
   .member-container {
+    display: contents;
     margin-left: .6rem;
     margin-right: .6rem;
 
@@ -73,10 +78,19 @@
   }
 
   .member-image {
-    height: 9.3rem;
-    width: 8.3rem;
+    grid-row: span 0;
+    height: 100px;
+    margin-right: 0;
+    margin-top: 1rem;
+    width: 100px;
+  }
+
+  .member-content {
+    flex: 1;
+    overflow: hidden;
   }
 }
+
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
 
