--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -46,59 +46,29 @@ nav {
 
 @media (max-width: 76.5rem) {
   nav {
-    font-size: .5rem;
-    height: 3.125rem;
-    overflow-x: auto;
-    overflow-y: hidden;
-    padding-bottom: .6rem;
-    padding-top: .3rem;
-    width: 100%;
 
-    a,
+    &.nav-column {
+      max-width: 95%;
+    }
+
     button {
-      display: flex;
-      font-size: .9rem;
-      justify-content: center;
-      width: auto;
-    }
-  }
-
-  .grid-content {
-    display: grid;
-    grid-template-columns: minmax(0, 1fr) auto;
-
-    .nav-column {
-      display: flex;
-      grid-column: 0;
-      justify-content: space-evenly;
-    }
-
-    .nav-button-column {
-      display: flex;
-      grid-column: 2;
-      margin-right: .5rem;
+      font-size: .6rem;
     }
   }
 }
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
   nav {
-    display: flex;
     height: 3.125rem;
-    justify-content: space-evenly;
     overflow-x: auto;
     overflow-y: hidden;
-    padding-bottom: .6rem;
-    padding-top: .3rem;
-    width: 100%;
 
     a,
     button {
       display: flex;
-      font-size: 1rem;
+      font-size: .8rem;
       justify-content: space-evenly;
-      margin-left: .5rem;
-      width: auto;
+      margin-left: 0;
     }
   }
 }
