Updates to login button, showing user avatar, added drop down menu

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -8,6 +8,7 @@ $white: #fff;
 $button-hover-yellow: #cf7;
 $gray: #d3d3d3;
 $red: #f00;
+$black: #000;
 $light-gray: #e5e5e4;
 $table-gray: #ddd;
 $profile-text-gray: #aaa;
