--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -1,7 +1,3 @@
-@import 'colors';
-@import 'fonts';
-
-// Logo Bar
 .logo-bar {
   align-items: center;
   background-color: $white;
@@ -11,151 +7,201 @@
   padding-right: 1rem;
   padding-top: 1rem;
 
-  img {
-    border-radius: .5rem;
-    height: 3.5rem;
-    width: auto;
+  .logo-bar-left-content {
+    align-items: center;
+    display: flex;
 
-    &:hover {
-      cursor: pointer;
+    .logo-content {
+      align-items: center;
+      display: flex;
+      padding: 0;
+
+      img {
+        border-radius: .5rem;
+        cursor: pointer;
+        height: 3.5rem;
+        width: auto;
+      }
+    }
+
+    .logo-text {
+      display: flex;
+      flex-direction: column;
+      margin-left: .5rem;
+
+      p {
+        line-height: 1.15;
+      }
+
+      .logo {
+        font-size: 1.75rem;
+        margin-right: .3rem;
+      }
+
+      .tagline {
+        color: $litterpic-green;
+        font-size: 1.1rem;
+        font-style: italic;
+        margin-top: 0;
+      }
     }
   }
 
-  p {
-    line-height: 1.3;
-  }
-
-  button {
+  .logo-bar-right-content {
     align-items: center;
-    border-radius: .5rem;
     display: flex;
-    flex-direction: column;
-    font-family: RopaSans, sans-serif;
-    font-size: 1rem;
-    height: 4rem;
-    justify-content: center;
-    line-height: 1.25;
-    margin: 0;
-    padding: 0 1rem;
-    width: auto;
-  }
-
-  .donate-button {
-    align-items: center;
-    background-color: $linkedin-blue;
-    border: 0;
-    border-radius: .5rem;
-    color: $white;
-    cursor: pointer;
-    display: flex;
-    font-size: 1rem;
-    font-weight: bold;
-    height: 4rem;
-    justify-content: center;
-    margin-bottom: auto;
-    padding: 0 1rem;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color .5s ease;
-    width: auto;
-
-    &:hover {
-      background-color: $nav-green;
-      color: $litterpic-green;
-    }
-  }
-
-
-  .tagline {
-    color: $litterpic-green;
-    font-size: 1.1rem;
-    font-style: italic;
+    gap: 1rem;
+    margin-right: 1rem;
   }
 }
 
-.logo-bar-right-content {
-  border-color: $black;
-  border-width: .06rem;
-  column-gap: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: auto;
-}
-
-.logo-content {
+.login-button,
+.donate-button {
   align-items: center;
+  background-color: $facebook-blue;
+  border-radius: .5rem;
+  color: $white;
+  cursor: pointer;
   display: flex;
-  flex-direction: row;
+  font-size: 2rem;
+  font-weight: bold;
+  height: 3.25rem;
+  justify-content: center;
+  line-height: 1.25;
+  margin-bottom: auto;
+  padding: 0 1rem;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color .5s ease;
+  width: auto;
+
+  &:hover {
+    background-color: $nav-green;
+  }
 }
 
-.logo {
-  font-size: 1.75rem;
-  margin-right: .3rem;
+.profile-picture-wrapper {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  position: relative;
 }
 
-.logo-text {
+.profile-picture {
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  height: 50px;
+  margin-right: 1rem;
+  object-fit: cover;
+  width: 50px;
+}
+
+.dropdown-icon {
+  color: $black;
+  font-size: 1.3rem;
+
+  &:hover {
+    color: $table-highlight-green;
+  }
+}
+
+.dropdown-menu {
+  background-color: $gray;
+  border-radius: 4px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: .5rem;
-}
+  padding: 8px 8px 8px 1rem;
+  position: absolute;
+  right: 3rem;
+  top: calc(9% + 10px);
+  z-index: 1;
 
+  button {
+    background: none;
+    border: 0;
+    color: $black;
+    cursor: pointer;
+    display: flex;
+    margin: .7rem 0;
+    padding: 0;
+    position: relative;
+  }
+}
 
 @media (max-width: 76.5rem) {
   .logo-bar {
-    padding-left: .6rem;
-    padding-top: 1rem;
+    padding: 5px;
 
     img {
       height: 3rem;
       padding-top: .2rem;
-      width: auto;
+    }
+  }
 
-      &:hover {
+  .logo-bar-left-content {
+    align-items: center;
+    display: flex;
+
+    .logo-content {
+      align-items: center;
+      display: flex;
+      padding: 0;
+
+      img {
+        border-radius: .5rem;
         cursor: pointer;
+        height: 3.5rem;
+        width: auto;
       }
     }
 
-    .logo {
-      font-size: .75rem;
-    }
+    .logo-text {
+      display: flex;
+      flex-direction: column;
+      margin-left: .5rem;
 
-    .tagline {
-      font-size: .5rem;
-    }
+      .logo {
+        font-size: 5rem;
+        margin-right: .3rem;
+      }
 
+      .tagline {
+        color: $litterpic-green;
+        font-size: .5rem;
+        font-style: italic;
+        margin-top: 0;
+      }
+    }
   }
-
 
   .logo-bar-right-content {
     align-items: center;
     display: flex;
     height: 100%;
     justify-content: center;
-
-
-    .login-button {
-      font-size: .75rem;
-      font-weight: normal;
-      height: 2rem;
-      margin: 0 5px;
-      padding: .5rem;
-    }
-
-    .donate-button {
-      font-size: .75rem;
-      font-weight: normal;
-      height: 2rem;
-      margin: 0 5px;
-      padding: .5rem;
-    }
   }
 
+  .login-button,
+  .donate-button {
+    font-size: .75rem;
+    font-weight: normal;
+    height: 2rem;
+    padding: .5rem;
+  }
 
+  .profile-picture {
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 1px;
+    height: 50px;
+    margin-right: .5rem;
+    object-fit: cover;
+    width: 50px;
+  }
 }
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
-
   .logo-bar {
     padding-left: .6rem;
     padding-top: 1rem;
@@ -164,16 +210,15 @@
     img {
       width: 2.5rem;
     }
-
-    .logo {
-      font-size: 1.25rem;
-    }
-
-    .tagline {
-      font-size: 1rem;
-    }
   }
 
+  .logo {
+    font-size: .75rem;
+  }
+
+  .tagline {
+    font-size: .5rem;
+  }
 
   .logo-bar-right-content {
     .login-button {
@@ -188,5 +233,4 @@
       padding: 1.25rem;
     }
   }
-
 }
