--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,8 +27,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 .about-us-content {
@@ -711,43 +709,59 @@ p .index-inspire-change-text {
   padding-right: 1rem;
   padding-top: 1rem;
 }
-.logo-bar img {
+.logo-bar .logo-bar-left-content {
+  align-items: center;
+  display: flex;
+}
+.logo-bar .logo-bar-left-content .logo-content {
+  align-items: center;
+  display: flex;
+  padding: 0;
+}
+.logo-bar .logo-bar-left-content .logo-content img {
   border-radius: 0.5rem;
+  cursor: pointer;
   height: 3.5rem;
   width: auto;
 }
-.logo-bar img:hover {
-  cursor: pointer;
-}
-.logo-bar p {
-  line-height: 1.3;
-}
-.logo-bar button {
-  align-items: center;
-  border-radius: 0.5rem;
+.logo-bar .logo-bar-left-content .logo-text {
   display: flex;
   flex-direction: column;
-  font-family: RopaSans, sans-serif;
-  font-size: 1rem;
-  height: 4rem;
-  justify-content: center;
-  line-height: 1.25;
-  margin: 0;
-  padding: 0 1rem;
-  width: auto;
+  margin-left: 0.5rem;
 }
-.logo-bar .donate-button {
+.logo-bar .logo-bar-left-content .logo-text p {
+  line-height: 1.15;
+}
+.logo-bar .logo-bar-left-content .logo-text .logo {
+  font-size: 1.75rem;
+  margin-right: 0.3rem;
+}
+.logo-bar .logo-bar-left-content .logo-text .tagline {
+  color: #015e41;
+  font-size: 1.1rem;
+  font-style: italic;
+  margin-top: 0;
+}
+.logo-bar .logo-bar-right-content {
   align-items: center;
-  background-color: #0a66c2;
-  border: 0;
+  display: flex;
+  gap: 1rem;
+  margin-right: 1rem;
+}
+
+.login-button,
+.donate-button {
+  align-items: center;
+  background-color: #4267b2;
   border-radius: 0.5rem;
   color: #fff;
   cursor: pointer;
   display: flex;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
-  height: 4rem;
+  height: 3.25rem;
   justify-content: center;
+  line-height: 1.25;
   margin-bottom: auto;
   padding: 0 1rem;
   text-align: center;
@@ -755,61 +769,95 @@ p .index-inspire-change-text {
   transition: background-color 0.5s ease;
   width: auto;
 }
-.logo-bar .donate-button:hover {
+.login-button:hover,
+.donate-button:hover {
   background-color: #479079;
-  color: #015e41;
-}
-.logo-bar .tagline {
-  color: #015e41;
-  font-size: 1.1rem;
-  font-style: italic;
 }
 
-.logo-bar-right-content {
-  border-color: #000;
-  border-width: 0.06rem;
-  column-gap: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: auto;
-}
-
-.logo-content {
+.profile-picture-wrapper {
   align-items: center;
+  cursor: pointer;
   display: flex;
-  flex-direction: row;
+  position: relative;
 }
 
-.logo {
-  font-size: 1.75rem;
-  margin-right: 0.3rem;
+.profile-picture {
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  height: 50px;
+  margin-right: 1rem;
+  object-fit: cover;
+  width: 50px;
 }
 
-.logo-text {
+.dropdown-icon {
+  color: #000;
+  font-size: 1.3rem;
+}
+.dropdown-icon:hover {
+  color: #4caf50;
+}
+
+.dropdown-menu {
+  background-color: #d3d3d3;
+  border-radius: 4px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: 0.5rem;
+  padding: 8px 8px 8px 1rem;
+  position: absolute;
+  right: 3rem;
+  top: calc(9% + 10px);
+  z-index: 1;
+}
+.dropdown-menu button {
+  background: none;
+  border: 0;
+  color: #000;
+  cursor: pointer;
+  display: flex;
+  margin: 0.7rem 0;
+  padding: 0;
+  position: relative;
 }
 
 @media (max-width: 76.5rem) {
   .logo-bar {
-    padding-left: 0.6rem;
-    padding-top: 1rem;
+    padding: 5px;
   }
   .logo-bar img {
     height: 3rem;
     padding-top: 0.2rem;
+  }
+  .logo-bar-left-content {
+    align-items: center;
+    display: flex;
+  }
+  .logo-bar-left-content .logo-content {
+    align-items: center;
+    display: flex;
+    padding: 0;
+  }
+  .logo-bar-left-content .logo-content img {
+    border-radius: 0.5rem;
+    cursor: pointer;
+    height: 3.5rem;
     width: auto;
   }
-  .logo-bar img:hover {
-    cursor: pointer;
+  .logo-bar-left-content .logo-text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0.5rem;
   }
-  .logo-bar .logo {
-    font-size: 0.75rem;
+  .logo-bar-left-content .logo-text .logo {
+    font-size: 5rem;
+    margin-right: 0.3rem;
   }
-  .logo-bar .tagline {
+  .logo-bar-left-content .logo-text .tagline {
+    color: #015e41;
     font-size: 0.5rem;
+    font-style: italic;
+    margin-top: 0;
   }
   .logo-bar-right-content {
     align-items: center;
@@ -817,19 +865,21 @@ p .index-inspire-change-text {
     height: 100%;
     justify-content: center;
   }
-  .logo-bar-right-content .login-button {
+  .login-button,
+  .donate-button {
     font-size: 0.75rem;
     font-weight: normal;
     height: 2rem;
-    margin: 0 5px;
     padding: 0.5rem;
   }
-  .logo-bar-right-content .donate-button {
-    font-size: 0.75rem;
-    font-weight: normal;
-    height: 2rem;
-    margin: 0 5px;
-    padding: 0.5rem;
+  .profile-picture {
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 1px;
+    height: 50px;
+    margin-right: 0.5rem;
+    object-fit: cover;
+    width: 50px;
   }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
@@ -841,11 +891,11 @@ p .index-inspire-change-text {
   .logo-bar img {
     width: 2.5rem;
   }
-  .logo-bar .logo {
-    font-size: 1.25rem;
+  .logo {
+    font-size: 0.75rem;
   }
-  .logo-bar .tagline {
-    font-size: 1rem;
+  .tagline {
+    font-size: 0.5rem;
   }
   .logo-bar-right-content .login-button {
     font-size: 0.75rem;
@@ -1251,6 +1301,10 @@ nav button.active {
     width: 300px;
   }
 }
+.volunteer-top-paragraph {
+  line-height: 2;
+}
+
 .community-service-button {
   border-radius: 0.5em;
   display: block;
