Added hamburger menu for mobile navigation.

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -128,7 +128,7 @@ p {
 
   .index-more-stories-button {
     display: flex;
-    justify-content: center;
+    justify-content: start;
 
     button {
       margin-bottom: 1rem;
