--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -2,14 +2,14 @@
 @import 'fonts';
 
 // Nav Bar
-nav {
+.nav-bar {
   align-items: center;
   display: flex;
   font-family: Rubik, Times, sans-serif;
   font-size: 2rem;
   font-weight: bolder;
   height: auto;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-bottom: .6rem;
   padding-top: .3rem;
   width: 100%;
@@ -19,56 +19,106 @@ nav {
     transition: color .5s ease;
   }
 
-  &.nav-column {
-    margin: 0 auto;
-    max-width: 55%;
+  .nav-links {
+    display: flex;
+    position: relative; // Add this line
+
+    a {
+      background-color: transparent;
+      margin-right: 1.5rem;
+
+      button {
+        background-color: transparent;
+        color: $black;
+        font-family: Rubik, Times, sans-serif;
+        font-size: 1.5rem;
+      }
+
+    }
   }
 
-  button {
-    align-content: center;
-    background: none;
-    color: $black;
-    display: flex;
-    font: inherit;
-    justify-content: space-evenly;
+  .nav-toggle {
+    display: none;
 
-    &:hover {
-      color: $nav-green;
+    @media (max-width: 76.5rem) {
+      align-items: center;
+      cursor: pointer;
+      display: flex;
+      height: 100%;
+      margin-bottom: .5rem;
+      position: absolute;
+      right: .5rem;
     }
 
-    &.active {
-      color: $nav-green;
+    .icon {
+      align-items: center;
+      display: flex;
+      height: 1.5rem;
+      justify-content: center;
+      width: 1.5rem;
+
+      svg {
+        fill: currentColor;
+        height: 100%;
+        width: 100%;
+      }
+    }
+  }
+
+  &.mobile-nav {
+    .nav-links {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+      margin-top: 1rem;
+
+      a {
+        margin: 0 0 .5rem;
+      }
     }
 
+    .nav-toggle {
+      .icon {
+        transform: rotate(180deg);
+      }
+    }
   }
 }
 
-
 @media (max-width: 76.5rem) {
-  nav {
+  .nav-bar .nav-links {
+    background-color: $gray;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    margin-top: .5rem;
+    padding: .5rem;
+    position: absolute;
+    right: .5rem;
+    top: 10%;
+    z-index: 100;
+  }
 
-    &.nav-column {
-      max-width: 95%;
-    }
-
-    button {
-      font-size: .6rem;
-    }
+  .nav-bar.mobile-nav .nav-links.show-navlinks {
+    display: flex;
   }
 }
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
-  nav {
-    height: 3.125rem;
-    overflow-x: auto;
-    overflow-y: hidden;
+  .nav-bar .nav-links {
+    background-color: $gray;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, .1);
+    display: none;
+    flex-direction: column;
+    margin-top: .5rem;
+    padding: .5rem;
+    position: absolute;
+    right: .5rem;
+    top: 23%;
+    z-index: 100;
+  }
 
-    a,
-    button {
-      display: flex;
-      font-size: .8rem;
-      justify-content: space-evenly;
-      margin-left: 0;
-    }
+  .nav-bar.mobile-nav .nav-links.show-navlinks {
+    display: flex;
   }
 }
