--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -15,8 +15,15 @@
   width: 100%;
 
   a {
+    color: $black;
+    font-size: 1.5rem;
+    font-weight: bolder;
     text-decoration: none;
     transition: color .5s ease;
+  }
+
+  .nav-link {
+    font-size: 1.5rem;
   }
 
   .nav-links {
@@ -53,14 +60,13 @@
     .icon {
       align-items: center;
       display: flex;
-      height: 1.5rem;
       justify-content: center;
-      width: 1.5rem;
+      padding-bottom: 1rem;
 
       svg {
         fill: currentColor;
-        height: 100%;
-        width: 100%;
+        height: 3rem;
+        width: 3rem;
       }
     }
   }
@@ -102,6 +108,21 @@
   .nav-bar.mobile-nav .nav-links.show-navlinks {
     display: flex;
   }
+
+
+  .nav-toggle {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+    .icon {
+      position: absolute;
+      right: .5rem;
+      top: 50%;
+      transform: translateY(-90%);
+    }
+  }
 }
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
@@ -114,7 +135,7 @@
     padding: .5rem;
     position: absolute;
     right: .5rem;
-    top: 23%;
+    top: 28%;
     z-index: 100;
   }
 
