--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -17,9 +17,10 @@
   img {
     border: 2px solid $litterpic-green;
     border-radius: 50%;
-    height: 10rem;
+    height: 100px;
+    margin-right: 2rem;
     object-fit: cover;
-    width: 10rem;
+    width: 100px;
   }
 }
 
@@ -30,9 +31,13 @@
   color: $white;
   cursor: pointer;
   display: inline-block;
+  margin-right: 2rem;
   margin-top: .5rem;
   padding: .5rem 1rem;
+  text-align: center;
   text-decoration: none;
+  width: 100px;
+
 
   &:hover {
     background-color: $nav-green;
@@ -44,7 +49,7 @@
   display: flex;
   flex-direction: column;
   grid-column: 1 / 2;
-  padding-left: 4rem;
+  padding-left: .5rem;
 }
 
 .profile-item {
@@ -61,7 +66,6 @@
 }
 
 @media (max-width: 76.5rem) {
-  // Mobile Support
 }
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
