--- a/styles/styles.css
+++ b/styles/styles.css
@@ -861,6 +861,7 @@ p .index-inspire-change-text {
   .logo-bar-right-content {
     align-items: center;
     display: flex;
+    flex-direction: column;
     height: 100%;
     justify-content: center;
   }
@@ -869,6 +870,7 @@ p .index-inspire-change-text {
     font-size: 0.75rem;
     font-weight: normal;
     height: 2rem;
+    margin-right: 5rem;
     padding: 0.5rem;
   }
   .profile-picture {
@@ -876,9 +878,12 @@ p .index-inspire-change-text {
     border-style: solid;
     border-width: 1px;
     height: 50px;
-    margin-right: 0.5rem;
+    margin-left: 5.5rem;
     object-fit: cover;
     width: 50px;
+  }
+  .profile-dropdown {
+    display: none;
   }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
@@ -912,6 +917,9 @@ p .index-inspire-change-text {
     font-size: 0.75rem;
     padding: 1.25rem;
   }
+  .profile-dropdown {
+    display: none;
+  }
 }
 .nav-bar {
   align-items: center;
@@ -926,8 +934,14 @@ p .index-inspire-change-text {
   width: 100%;
 }
 .nav-bar a {
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: bolder;
   text-decoration: none;
   transition: color 0.5s ease;
+}
+.nav-bar .nav-link {
+  font-size: 1.5rem;
 }
 .nav-bar .nav-links {
   display: flex;
@@ -960,14 +974,13 @@ p .index-inspire-change-text {
 .nav-bar .nav-toggle .icon {
   align-items: center;
   display: flex;
-  height: 1.5rem;
   justify-content: center;
-  width: 1.5rem;
+  padding-bottom: 1rem;
 }
 .nav-bar .nav-toggle .icon svg {
   fill: currentColor;
-  height: 100%;
-  width: 100%;
+  height: 3rem;
+  width: 3rem;
 }
 .nav-bar.mobile-nav .nav-links {
   align-items: flex-start;
@@ -998,6 +1011,18 @@ p .index-inspire-change-text {
   .nav-bar.mobile-nav .nav-links.show-navlinks {
     display: flex;
   }
+  .nav-toggle {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+  .nav-toggle .icon {
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-90%);
+  }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
   .nav-bar .nav-links {
@@ -1009,7 +1034,7 @@ p .index-inspire-change-text {
     padding: 0.5rem;
     position: absolute;
     right: 0.5rem;
-    top: 23%;
+    top: 28%;
     z-index: 100;
   }
   .nav-bar.mobile-nav .nav-links.show-navlinks {
@@ -1032,9 +1057,10 @@ p .index-inspire-change-text {
 .profile-picture img {
   border: 2px solid #015e41;
   border-radius: 50%;
-  height: 10rem;
+  height: 100px;
+  margin-right: 2rem;
   object-fit: cover;
-  width: 10rem;
+  width: 100px;
 }
 
 .edit-profile-button {
@@ -1044,9 +1070,12 @@ p .index-inspire-change-text {
   color: #fff;
   cursor: pointer;
   display: inline-block;
+  margin-right: 2rem;
   margin-top: 0.5rem;
   padding: 0.5rem 1rem;
+  text-align: center;
   text-decoration: none;
+  width: 100px;
 }
 .edit-profile-button:hover {
   background-color: #479079;
@@ -1057,7 +1086,7 @@ p .index-inspire-change-text {
   display: flex;
   flex-direction: column;
   grid-column: 1/2;
-  padding-left: 4rem;
+  padding-left: 0.5rem;
 }
 
 .profile-item {
